feat: 扩展分页请求和分页响应，支持游标模式